# parad

./: HW2.py  HW4.py  Makefile  avrhello.S  hw3.py  lol.ss  main.c  model.py  struct.c  struct.h  view.c  view.h
HW3/: Makefile  Makefile_huffman
HW3/src/: huffman.cpp  huffman.h  main.cpp  options.cpp  options.h
HW3/test/: CMakeLists.txt  test.cpp
visitors/: folder.py  model.py  printer.py
visitors/visitors/: printer.py
